# slovodel-bot

./: .flake8  .gitignore  LICENSE  Procfile  README.md  bot_config.toml  mypy.ini  noxfile.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
slovodel_bot/: __main__.py  bot_config.toml  config_parser.py  heroku.py
slovodel_bot/controller/: default_controller.py
slovodel_bot/model/: __init__.py  db.py  model.py  word_maker.py
slovodel_bot/resources/: welcome_message.md
slovodel_bot/resources/dictionaries/: adjectives.txt  nouns.txt  verbs.txt
slovodel_bot/resources/json_corpus/: adjectives.json  nouns.json  verbs.json
slovodel_bot/utils/: corpus_parser.py  redis_upload_dict.py
slovodel_bot/view/: __init__.py  keyboard.py  message_sender.py
tests/: test_model.py
tests/model/: test_db.py  test_model.py  test_word_maker.py
tests/utils/: test_corpus_parser.py  test_dict_1.txt  test_json_1.json  test_json_1_ref.json  test_redis_upload_dict.py
tests/view/: test_keyboard.py
