[tool.poetry]
name = "slovodel-bot"
version = "0.1.0"
description = "Telegram bot that produces non-existing Russian words."
authors = ["Simon Weiss <wonder@simonweiss.space>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/weiss-d/slovodel-bot"

[tool.poetry.dependencies]
python = "^3.7"
redis = "^3.5.3"
rusyll = "^0.1.1"
markovify = "^0.8.2"
python-telegram-bot = "^12.8"
toml = "^0.10.1"
click = "^7.1.2"
hiredis = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.2.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"
fakeredis = "^1.4.1"
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"

[tool.coverage.paths]
source = ["slovodel_bot", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["."]

[tool.coverage.report]
show_missing = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# Coverage.py config
