[tool.poetry]
name = "slovodel-bot"
version = "0.1.0"
description = "Telegram bot that produces non-existing Russian words."
authors = ["Simon Weiss <wonder@simonweiss.space>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/weiss-d/slovodel-bot"

[tool.poetry.dependencies]
python = "^3.7"
rusyll = "^0.1.1"
markovify = "^0.8.2"
toml = "^0.10.2"
click = "^7.1.2"
hiredis = "^1.1.0"
dacite = "^1.5.1"
python-telegram-bot = "^13.0"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"
fakeredis = "^1.4.4"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.790"

[tool.coverage.paths]
source = ["slovodel_bot", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["."]

[tool.coverage.report]
show_missing = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# Coverage.py config
